# backend

./: CARDS.md  Dockerfile  PROJECT.md  PROJECT_PLAN.md  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  makefile  plan.md  pyproject.toml
alembic/: env.py
alembic/versions/: ec978150ca06_initial_schema.py
app/: app.py  router.py
app/api/: __init__.py  admin.py  auth.py  catalog.py  stats.py  study.py  task_scans.py  users.py
app/core/: auth.py  database.py  deps.py  settings.py  supabase.py
app/models/: __init__.py  catalog.py  question.py  stats.py  study.py  study_plan.py  study_plan_item.py  study_session.py  subject.py  task_scans.py  user.py  user_progress.py  user_subject.py  week.py
app/repositories/: base.py  question.py  stats.py  study.py  subject.py  user.py  week.py
app/schemas/: catalog.py  stats.py  study.py  user.py
app/services/: __init__.py  admin.py  ai_evaluation.py  base.py  catalog.py  stats.py  study.py  supabase_utils.py  task_scan.py  task_scans.py  user.py  users.py
supabase/: schema.sql
tests/: conftest.py  test_auth.py  test_catalog.py  test_stats.py  test_study_flashcard_mode.py  test_study_task_mode.py  test_study_test_mode.py
